[package]
name = "rustymicrobit"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.1"
nrf52832-hal = "0.18.0"
nrf52832-pac = "0.12.2"
panic-halt = "1.0.0"
rtt-target = "0.6.1"
